--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heypano/pupds": "^2.0.1",
+    "@heypano/pupds": "^2.0.9",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -21,10 +21,11 @@
     "styled-components": "^5.3.8",
     "throttle-debounce": "^5.0.0",
     "typescript": "4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^10.0.0",
     "prettier": "^2.8.4"
   }
 }
