--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heypano/pupds": "^2.0.9",
+    "@heypano/pupds": "^2.0.12",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -17,13 +17,17 @@
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "styled-components": "^5.3.8",
     "throttle-debounce": "^5.0.0",
     "typescript": "4.9.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.12",
+    "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^10.0.0",
     "prettier": "^2.8.4"
