--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   },
   "dependencies": {
     "@heypano/pupds": "^2.0.27",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
-    "react": "18.2.0",
+    "@types/node": "22.5.5",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.13",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
-    "styled-components": "^5.3.8",
-    "throttle-debounce": "^5.0.0",
-    "typescript": "4.9.5",
+    "styled-components": "^6.1.13",
+    "throttle-debounce": "^5.0.2",
+    "typescript": "5.5.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react-color": "^3.0.12",
     "@types/react-modal": "^3.16.3",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
-    "prettier": "^2.8.4"
+    "prettier": "^3.3.3"
   }
 }
